--- a/templates/home.html
+++ b/templates/home.html
@@ -3,7 +3,7 @@
 <html>
 
 <head>
-  <title>Alstar - Bootstrap one page parallax template</title>
+  <title>Serverside</title>
   <meta charset="utf-8" />
   <meta content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no" name="viewport">
   <!-- css -->
@@ -12,13 +12,6 @@
   <link href="{% static 'css/bootstrap.min.css' %}" rel="stylesheet" media="screen">
   <link href="{% static 'css/style.css' %}" rel="stylesheet" media="screen">
   <link href="{% static 'color/default.css' %}" rel="stylesheet" media="screen">
-
-  <!-- =======================================================
-    Theme Name: Alstar
-    Theme URL: https://bootstrapmade.com/alstar-free-parallax-bootstrap-template/
-    Author: BootstrapMade.com
-    Author URL: https://bootstrapmade.com
-  ======================================================= -->
 </head>
 
 <body>
@@ -35,7 +28,7 @@
         </button>
 
         <!-- Logo text or image -->
-        <a class="navbar-brand" href="index.html">Alstar</a>
+        <a class="navbar-brand" href="index.html">Serverside</a>
 
       </div>
       <div class="navigation collapse navbar-collapse navbar-ex1-collapse">
@@ -43,7 +36,6 @@
           <li class="current"><a href="#intro">Home</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#services">Service</a></li>
-          <li><a href="#portfolio">Works</a></li>
           <li><a href="#team">Team</a></li>
           <li><a href="#contact">Contact</a></li>
         </ul>
@@ -63,8 +55,8 @@
             <div class="carousel-background"><img src="{% static 'img/intro/1.jpg' %}" alt=""></div>
             <div class="carousel-container">
               <div class="carousel-content">
-                <h2 class="animated fadeInDown">Some technology</h2>
-                <p class="animated fadeInUp">Customer is the king. We believe in it.</p>
+                <h2 class="animated fadeInDown">Server side</h2>
+                <p class="animated fadeInUp">Website design and development</p>
                 <a href="#about" class="btn-get-started animated fadeInUp">Read More</a>
               </div>
             </div>
@@ -75,8 +67,8 @@
             <div class="carousel-background"><img src="{% static 'img/intro/2.jpg' %}" alt=""></div>
             <div class="carousel-container">
               <div class="carousel-content">
-                <h2 class="animated fadeInDown">All time support.</span></h2>
-                <p class="animated fadeInUp"></p>
+                <h2 class="animated fadeInDown">All time support</span></h2>
+                <p class="animated fadeInUp">Customer is the king</p>
                 <a href="#about" class="btn-get-started animated fadeInUp">Read More</a>
               </div>
             </div>
@@ -87,7 +79,7 @@
             <div class="carousel-background"><img src="{% static 'img/intro/3.jpg' %}" alt=""></div>
             <div class="carousel-container">
               <div class="carousel-content">
-                <h2 class="animated fadeInDown">Bridging gap with customers.</span></h2>
+                <h2 class="animated fadeInDown">Bridging gap with customers</span></h2>
                 <p class="animated fadeInUp">We believe in bridging gap with our customers.</p>
                 <a href="#about" class="btn-get-started animated fadeInUp">Read More</a>
               </div>
@@ -123,16 +115,16 @@
       </div>
       <div class="row wow fadeInUp">
         <div class="col-md-6 about-img">
-          <img src="{% static 'img/about-img.jpg' %}" alt="">
+          <img src="{% static 'img/team/logo.jpg' %}" alt="">
         </div>
 
         <div class="col-md-6 content">
           {% comment %} <h2>It is all around customer for us.</h2> {% endcomment %}
           {% comment %} <h3>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est
             laborum.</h3> {% endcomment %}
-          <p>
+          <h3>
             We believe in customer satisfaction. We are a tech ethusiastic group of people who have worked in different technologies for the past 7 years. Having worked with clients from different sort of backgrounds, we are aware that sometimes there is a huge gap between customers and a company. This gap needs to be reduced. 
-          </p>
+          </h3>
         </div>
       </div>
     </div>
@@ -145,7 +137,7 @@
         <div class="col-md-12">
           <div class="color-light">
             <h2 class="wow bounceInDown" data-wow-delay="0.5s">Smooth and impressive UI.</h2>
-            <p class="lead wow bounceInUp" data-wow-delay="1s">We focus on the quality.</p>
+            <p class="lead wow bounceInUp" data-wow-delay="1s">Quality is our top priority.</p>
           </div>
         </div>
       </div>
@@ -174,8 +166,8 @@
                 <div class="row">
                   <div class="col-sm-12 col-md-offset-1 col-md-6">
                     <div class="wow bounceInLeft">
-                      <h4>Website Design</h4>
-                      <p>We believe in building user friendly designs.</p>
+                      <h1>Website Design</h4>
+                      <h3>User friendly designs.</h3>
                     </div>
                   </div>
                   <div class="col-sm-12 col-md-5">
@@ -189,8 +181,8 @@
                 <div class="row">
                   <div class="col-sm-12 col-md-offset-1 col-md-6">
                     <div class="wow bounceInLeft">
-                      <h4>Brand Identity</h4>
-                      <p>Having built the website, how are you going to let people know about it? Leave that to us.</p>
+                      <h1>Brand Identity</h1>
+                      <h3>Having built the website, how are you going to let people know about it? Leave that to us.</h3>
                     </div>
                   </div>
                   <div class="col-sm-12 col-md-5">
@@ -204,8 +196,8 @@
                 <div class="row">
                   <div class="col-sm-12 col-md-offset-1 col-md-6">
                     <div class="wow bounceInLeft">
-                      <h4>Website development.</h4>
-                      <p>Your website needs to work smoothly as well. Don't worry, let us handle it.</p>
+                      <h1>Website development.</h1>
+                      <h3>Your website needs to work smoothly as well. Don't worry, let us handle it.</h3>
                     </div>
                   </div>
                   <div class="col-sm-12 col-md-5">
@@ -343,30 +335,30 @@
       <div class="row">
         <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3">
           <div class="box-team wow bounceInUp" data-wow-delay="0.1s">
-            <img src="{% static 'img/team/1.jpg' %}" alt="" class="img-circle img-responsive" />
-            <h4>Dominique Vroslav</h4>
-            <p>Art Director</p>
+            <img src="{% static 'img/team/nisarg.jpg' %}" alt="" class="img-circle img-responsive" />
+            <h4>Nisarg</h4>
+            <p>Business Developer</p>
           </div>
         </div>
         <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3" data-wow-delay="0.3s">
           <div class="box-team wow bounceInUp">
-            <img src="{% static 'img/team/2.jpg' %}" alt="" class="img-circle img-responsive" />
-            <h4>Thomas Jeffersonn</h4>
-            <p>Web Designer</p>
+            <img src="{% static 'img/team/piyush.jpeg' %}" alt="" class="img-circle img-responsive" />
+            <h4>Piyush</h4>
+            <p>Developer</p>
           </div>
         </div>
         <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3" data-wow-delay="0.5s">
           <div class="box-team wow bounceInUp">
-            <img src="{% static 'img/team/3.jpg' %}" alt="" class="img-circle img-responsive" />
-            <h4>Nola Maurin</h4>
-            <p>Illustrator</p>
+            <img src="{% static 'img/team/pras.jpeg' %}" alt="" class="img-circle img-responsive" />
+            <h4>Prashant</h4>
+            <p>Designer &   Developer</p>
           </div>
         </div>
         <div class="col-xs-12 col-sm-3 col-md-3 col-lg-3" data-wow-delay="0.7s">
           <div class="box-team wow bounceInUp">
-            <img src="{% static 'img/team/4.jpg' %}" alt="" class="img-circle img-responsive" />
-            <h4>Mira Ladovic</h4>
-            <p>Typographer</p>
+            <img src="{% static 'img/team/ankur.jpg' %}" alt="" class="img-circle img-responsive" />
+            <h4>Ankur</h4>
+            <p>Developer</p>
           </div>
         </div>
       </div>
@@ -381,7 +373,7 @@
           <div class="section-heading">
             <h2>Contact us</h2>
             <div class="heading-line"></div>
-            <p>If you have any question or just want to say 'hello' to Alstar web studio please fill out form below and
+            <p>If you have any question or just want to say 'hello' to Serverside web studio please fill out form below and
               we will be get in touch with you within 24 hours. </p>
           </div>
         </div>
@@ -448,7 +440,7 @@
             <i class="fa fa-map-marker fa-4x"></i>
             <h5>Main Office</h5>
             <p>
-              109 Borough High Street,<br />London SE1 1NL
+              Prachi apartments, Mahim Palghar Road,<br />Palghar
             </p>
           </div>
         </div>
@@ -457,8 +449,7 @@
             <i class="fa fa-phone fa-4x"></i>
             <h5>Call</h5>
             <p>
-              +1 111 9998 7774<br> +1 245 4544 6855
-
+              +91 95116-75165<br> +91 88569-11982
             </p>
           </div>
         </div>
@@ -472,37 +463,7 @@
           </div>
         </div>
       </div>
-      <div class="row mar-top30">
-        <div class="col-md-12">
-          <h5>We're on social networks</h5>
-          <ul class="social-network">
-            <li><a href="#">
-                <span class="fa-stack fa-2x">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
-                </span></a>
-            </li>
-            <li><a href="#">
-                <span class="fa-stack fa-2x">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-dribbble fa-stack-1x fa-inverse"></i>
-                </span></a>
-            </li>
-            <li><a href="#">
-                <span class="fa-stack fa-2x">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
-                </span></a>
-            </li>
-            <li><a href="#">
-                <span class="fa-stack fa-2x">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-pinterest fa-stack-1x fa-inverse"></i>
-                </span></a>
-            </li>
-          </ul>
-        </div>
-      </div>
+      
     </div>
   </section>
 
@@ -511,7 +472,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12">
-          <p>Copyright &copy; Alstar. All rights reserved.</p>
+          <p>Copyright &copy; Serverside. All rights reserved.</p>
           <div class="credits">
             <!--
               All the links in the footer should remain intact.
